# simulations

./: .gitignore  Cargo.toml  run-checks.sh
src/: bitflipper.rs  bitgrid.rs  elementry.rs  grid.rs  lib.rs  life.rs
