[package]
name = "simulations"
version = "0.2.0"
edition = "2021"

[dependencies]
rand = { version = "0.9", default-features = false }
image = { version = "0.25", optional = true }
ultraviolet = { version = "0.10.0", features = ["int"] }

[dev-dependencies]
image = "0.25"
indoc = "2"
pretty_assertions = "1.4"
rstest = "0.24"

[features]
default = ["std", "image"]
std = []
image = ["std", "dep:image"]
